# url-shortener

./: .dockerignore  .gitignore  Cargo.toml  bench-read.sh  bench.sh  compose-remote.yml  compose.yml  connect.sh  deploy.sh  install.sh
api/: .gitignore  Cargo.toml  Dockerfile  bench-read.sh
api/migrations/sqlite/: V2__users.sql  V3__session.sql
api/src/: main.rs  postgres.rs  structs.rs
api/src/routes/: mod.rs  shorten.rs
api/src/routes/api/: api.rs  mod.rs
api/src/routes/auth/: auth.rs  mod.rs
infra/: .gitignore  cdk.json  infrastructure.ts  package-lock.json  package.json
migrations/postgres/: V1__metrics.sql
migrations/sqlite/: V1__urls.sql
src/: entities.rs  headers.rs  id.rs  main.rs  metrics.rs  migrations.rs  postgres.rs  sqlite.rs  structs.rs  url_storage.rs
src/middleware/: auth.rs  mod.rs
src/routes/: shorten.rs
src/routes/api/: api.rs  mod.rs
src/routes/auth/: auth.rs  mod.rs
src/storage/: lmdb.rs  mod.rs  sqlite.rs  storage.rs
