[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
flume = { version = "0.11.1", features = ["async"] }
rand = "0.8.5"
cookie = "0.18.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
sha3 = "0.10.8"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.1"

[profile.release]
opt-level = 3
debug = 1
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
